--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,6 @@ sourceCompatibility = 1.6
 targetCompatibility = 1.6
 
 jar {
-    classifier = ''
     manifest {
         attributes 'Main-Class': 'net.technicpack.launcher.LauncherMain'
     }
@@ -26,23 +25,23 @@ jar {
 
 sourceSets {
     main {
-        output.resourcesDir = 'build/classes/main/net/technicpack/launcher/resources'
+        java {
+            srcDir 'src/java'
+        }
+        resources{
+            exclude '**'
+        }
     }
 }
 
+task copyResources(type: Copy){//Work around for https://issues.gradle.org/browse/GRADLE-2213
+    from 'src/main/resources'
+    into 'build/classes/main/net/technicpack/launcher/resources'
+}
 
-/*
-shadowJar {
-  dependencies {
-    include(dependency('org.ccil.cowan.tagsoup:.*'))
-    include(dependency('net.technicpack:.*'))
-    include(dependency('org.jdom:jdom'))
-    include(dependency('rome:rome'))
-    include(dependency('com.beust:.*'))
-    include(dependency('com.google:.*'))
-    include(dependency('org.eclipse:.*'))
-  }
-}*/
+build.dependsOn(copyResources)
+
+
 
 repositories {
     maven { url "https://jitpack.io" }
