--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,15 @@ sourceSets {
     }
 }
 
+import org.apache.tools.ant.filters.ReplaceTokens
+
+processResources {
+    from (sourceSets.main.java) {
+        include 'net/technicpack/launcher/ui/components/discover/DiscoverInfoPanel.java'
+        filter(ReplaceTokens, tokens: ['DISCOVERURL' : urlDiscover])
+    }
+}
+
 task copyResources(type: Copy){//Work around for https://issues.gradle.org/browse/GRADLE-2213
     from 'src/main/resources'
     into 'build/classes/main/net/technicpack/launcher/resources'
