--- a/gradle.properties
+++ b/gradle.properties
@@ -1,9 +1,11 @@
-/*
-All of these require a value except urlNews.
-*/
-buildNumber = 37
-urlDiscover = http://api.technicpack.net/discover/
+//News URL. Leave this blank if you don't want to use it
 urlNews =
-urlSolder = http://solder.technicpack.net/api/
-urlSponsor = https://apexminecrafthosting.com/partners/technic
+//Solder API link used to update **REQUIRED**
+urlSolder = http://api.technicpack.net/launcher/
+//Discover page URL
+urlDiscover = http://api.technicpack.net/discover/
+//Page used for updating
 urlVersion = http://api.technicpack.net/launcher/
+//Sponsorlink
+urlSponsor = https://apexminecrafthosting.com/partners/technic
+buildNumber = 37
