--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,4 @@
-/*
-All of these require a value except urlNews.
-*/
+/* All of these require a value except urlNews. */
 buildNumber = 37
 urlDiscover = http://api.technicpack.net/discover/
 urlNews =
